--- a/login.css
+++ b/login.css
@@ -88,7 +88,7 @@ body{
   
 }
 
-.basic-button{
+.btn-link{
   color: #FFFFFF;
   padding:0px;
 }
@@ -119,20 +119,18 @@ body{
 
 .separator-element{
   display: inline-block;
-  height:100%;color:white;
+  height:100%;color:#FFFFFF;
   position: relative;
   text-align: center;
   font-family: "Open Sans";
 }
 
 .separator-border{
-height:2px;
-background-color:white;
-position: absolute;
-    top: 75%;
-    width: 100%;
-
-
+  height:2px;
+  background-color: #FFFFFF;
+  position: absolute;
+  top: 75%;
+  width: 100%;
 }
 
 .btnSocialMedia{
@@ -141,32 +139,32 @@ position: absolute;
   width:80%;
   display: flex;
   border-radius: 8px;
-    overflow: hidden;
-    margin-bottom:25px;
-    margin-left: auto;
-    margin-right: auto;
+  overflow: hidden;
+  margin-bottom:25px;
+  margin-left: auto;
+  margin-right: auto;
 
 }
 
 .btnSocialMedia-icon{
   width:45px;
   display: flex;
-    padding: 10px;
+  padding: 10px;
 }
 
 .btnSocialMedia-text{
   height: 100%;
   flex-grow: 1;
-  color:white;
+  color:#FFFFFF;
   font-family: Open Sans;
-font-style: normal;
-font-weight: bold;
-font-size: 12px;
-text-align: center;
-text-transform: uppercase;
-display: flex;
-    justify-content: center;
-    align-items: center;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
 }
 
@@ -196,7 +194,7 @@ display: flex;
 
 #carouselExampleControls{
   width: 297px;
-    display: inline-block;
+  display: inline-block;
 }
 
 
