--- a/login.css
+++ b/login.css
@@ -63,7 +63,7 @@ body{
   height: 52px;
 }
 
-#input-text{
+.input-text{
  width: 278px;
 }
 
@@ -158,7 +158,7 @@ body{
   color:#FFFFFF;
   font-family: Open Sans;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 12px;
   text-align: center;
   text-transform: uppercase;
