--- a/login.css
+++ b/login.css
@@ -42,7 +42,7 @@ body{
 
 .title{
   color: #FFFFFF;
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif;
   font-weight: 400;
   font-size: 45px;
   margin: auto;
@@ -119,7 +119,8 @@ body{
 
 .separator-element{
   display: inline-block;
-  height:100%;color:#FFFFFF;
+  height:100%;
+  color:#FFFFFF;
   position: relative;
   text-align: center;
   font-family: "Open Sans";
@@ -202,14 +203,14 @@ body{
   display: none;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 767.68px) {
   .btnSocialMedia {
    width:100%;
   }
   
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768.68px) {
  
 }
 
