--- a/main.css
+++ b/main.css
@@ -2,10 +2,9 @@
 body{
     background-color: #141414;
 }
-.header{
+.bg-light{
     background: linear-gradient(0deg, rgba(43,179,79,1) 0%, rgba(124,210,53,1) 100%);
-    height: 120px;
-    display: grid;
+    display: flex;
 }
 
 .title{
@@ -15,8 +14,9 @@ font-weight: 400;
 font-size: 28px;
 margin: 0;
 display: inline;
-float: left;
+margin-inline-start: auto;
 width: fit-content;
+padding: 0;
 }
 .bold-title{
 font-weight: 800;
@@ -29,18 +29,16 @@ font-weight: 800;
     justify-content: center;
 }
 .search-bar{
-    height: 40px;
-    width: 362px;
-    display: inline;
-    padding-top: 32px;
-    align-items: center;
+
+  display: inline;
     
 }
 .left-group{
-    float: right;
+    display: inline;
 }
 .user-img{
     width: fit-content;
+    border-radius: 20px;
 }
 
 .navbar-brand{
@@ -56,21 +54,27 @@ color: #A6A6A6;
 }
 .cont-line{
     height: 2px;
-    width: 1360px;
-    margin-right: 40px;
-    margin-top: 29px;
+    width: 80%;
+    
 }
 .line{
     height:2px;
-    color: #FFFFFF;
-    position: absolute;
-    display: none;
+    background-color: #FFFFFF;
+    position: relative;
+    width: 80%;
 }
-
-.btn-link{
+.menu-link{
     color: #FFFFFF;
-    padding:0px;
-    display: inline;
+}
+.home-link{
+    color: #7CD235;
+}
+.bold-link{
+    font-weight: 800;
+}
+.just-link{
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
 }
 .sidebar{
     width: 263px;
@@ -78,26 +82,26 @@ color: #A6A6A6;
     padding: 10px;
 }
 .pos-bog-titles{
-    display: flex;
-    margin: 0;
-    padding: 50;
+    display: grid;
+    width: min-content;
 }
 .big-titles{
     width: fit-content;
+    position: relative;
+
 }
 .main-title{
     
     align-items: center;
     justify-content: left;
-    width: fit-content;
     color: #FFFFFF;
 }
 .subtitle{
     color: #FFFFFF;
-    width: fit-content;
+    
 }
 .card-holder{
-    margin-left: 263px;
+    
 }
 .card{
    border-radius: 10px;
